--- a/HomeWork/HomeWork/HomeWork/HomeWork.csproj
+++ b/HomeWork/HomeWork/HomeWork/HomeWork.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Magazine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queue.cs" />
     <Compile Include="ReadingRooms.cs" />
   </ItemGroup>
   <ItemGroup>
